<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="blocksDescendants"
    tools:context=".ui.detail.DetailCourseActivity"
    tools:showIn="@layout/activity_detail_course">

    <ImageView
        android:id="@+id/iv_detail_image_poster"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/half_margin"
        android:layout_marginTop="@dimen/half_margin"
        android:src="@color/colorImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_margin"
        android:layout_marginEnd="@dimen/half_margin"
        android:gravity="start"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_detail_image_poster"
        app:layout_constraintTop_toTopOf="@id/iv_detail_image_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/tv_detail_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin"
        android:layout_marginEnd="@dimen/half_margin"
        android:layout_marginBottom="@dimen/half_margin"
        android:gravity="start"
        android:textColor="@color/colorTextSecondary"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@id/iv_detail_image_poster"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_detail_title"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/dateline" />

    <Button
        android:id="@+id/btn_detail_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/bg_button"
        android:text="@string/start_learn"
        android:textColor="@android:color/background_light"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/iv_detail_image_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_date"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_title"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_detail_desc_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/description_module"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_detail_image_poster" />


    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_desc_title" />

    <TextView
        android:id="@+id/tv_detail_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        tools:text="@string/description" />

    <TextView
        android:id="@+id/tv_detail_list_module_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/list_module"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

    <View
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:background="#000000"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_list_module_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_detail_list_module"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line2"
        tools:listitem="@layout/item_list_module" />

    <ProgressBar
        android:id="@+id/pb_detail_module"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/rv_detail_list_module"
        app:layout_constraintEnd_toEndOf="@+id/rv_detail_list_module"
        app:layout_constraintStart_toStartOf="@+id/rv_detail_list_module"
        app:layout_constraintTop_toTopOf="@+id/rv_detail_list_module"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>
